<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/titAgrSecc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarSecc"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <TextView
        android:id="@+id/textViewM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materia"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
         />
    <Spinner
        android:id="@+id/materia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />
        <EditText
            android:id="@+id/claveNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintIdN"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:id="@+id/editTextNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintNueva"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elSecc"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />
    <EditText
            android:id="@+id/editTextSecc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintSecc"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
    <TextView
        android:id="@+id/textViewD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dias"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">
        <TableRow>
            <CheckBox
                android:id="@+id/lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunes"
                 />
            <CheckBox
                android:id="@+id/martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martes"
                 />
            <CheckBox
                android:id="@+id/miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles"
                 />
            </TableRow>
            <TableRow>
            <CheckBox
                android:id="@+id/jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jueves"
                 />
            <CheckBox
                android:id="@+id/viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viernes"
                 />

            <CheckBox
                android:id="@+id/sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado"
              />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textViewH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <EditText
        android:id="@+id/editTextI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintI"
        android:inputType="time"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <EditText
        android:id="@+id/editTextF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintF"
        android:inputType="time"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/ciclo"/>
        <Spinner
            android:id="@+id/ciclo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agregar"
                android:layout_centerInParent="true"
                android:onClick="agregar"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>