<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/bAlumnosC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bAlumnos"/>
        <Button
            android:id="@+id/bEncuadreC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bEncuadre"/>
        <Button
            android:id="@+id/bEstadisticasC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bEstadisticas"/>
    </LinearLayout>
</ScrollView>