<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregarEvaluacion"/>
        <EditText
            android:id="@+id/nombreAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hintNombreAct" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descAct"/>
        <EditText
            android:id="@+id/descAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoAct"/>
        <Spinner
            android:id="@+id/tipoAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temasAct"/>
        <Spinner
            android:id="@+id/temasAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/temasAct2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/temasAct3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/temasAct4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/temasAct5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaEval"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mesAnioEvaluacion"/>
        <com.github.sundeepk.compactcalendarview.CompactCalendarView
            android:id="@+id/fechaEvaluacion"
            android:layout_width="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="250dp"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextSize="12sp"
            app:compactCalendarBackgroundColor="#4dd0e1"
            app:compactCalendarTextColor="#fff"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#00695c"
            app:compactCalendarCurrentDayBackgroundColor="#00bfa5"
            app:compactCalendarMultiEventIndicatorColor="#fff" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/agregarAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agregar"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>