<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoCrit"/>
        <EditText
            android:id="@+id/nomNCrit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prCritN"/>
        <EditText
            android:id="@+id/ptNCrit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/agrActEnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>