<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomTema"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:id="@+id/nomTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descTema"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:id="@+id/descTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/agregarTema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agregar"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>