<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomMatTema"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <TextView
            android:id="@+id/nomMatTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomTema"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <TextView
            android:id="@+id/nomTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descTema"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <TextView
            android:id="@+id/descTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
    </LinearLayout>
</ScrollView>